<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Political Preparedness</string>
    <string name="upcoming_elections">UPCOMING ELECTIONS</string>
    <string name="find_my_representatives">FIND MY REPRESENTATIVES</string>
    <string name="ballot_logo_content_description">Ballot Logo</string>
    <string name="saved_elections">SAVED ELECTIONS</string>
    <string name="error_retrieving_voter_info">Error while retrieving voter info</string>
    <string name="election_information">Election Information</string>
    <string name="voting_locations_label">Voting Locations</string>
    <string name="ballot_information_label">Ballot Information</string>
    <string name="follow_election_button">FOLLOW ELECTION</string>
    <string name="unfollow_election_button">UNFOLLOW ELECTION</string>
    <string name="address_line_hint">A Fake Street</string>
    <string name="address_line_2_hint">2nd floor</string>
    <string name="city_hint">Mountain View</string>
    <string name="zipcode_hint">28016</string>
    <string name="use_my_location">USE MY LOCATION</string>
    <string name="my_representatives">My Representatives</string>
    <string name="permission_denied_explanation">We need to know your location to retrieve the representatives</string>
    <string name="settings">Settings</string>
    <string name="representatives_not_found">Representatives not found</string>

    <!-- TODO: Add necessary string values -->

</resources>
