<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:motion="http://schemas.android.com/tools">

    <!-- TODO: Add data binding node -->
    <data>
        <import type="android.view.View" />
        <variable
            name="representativeViewModel"
            type="com.example.android.politicalpreparedness.representative.RepresentativeViewModel" />
    </data>

    <!-- TODO: Add motion scene to hide form on vertical scroll. -->
    <androidx.constraintlayout.motion.widget.MotionLayout
        android:id="@+id/representative_fragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layoutDescription="@xml/fragment_representative_scene">

        <!-- TODO: Add visual styling and content -->
        <TextView
            android:id="@+id/search_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!-- TODO: Add data binding value -->
        <!-- TODO: Add visual styling and content -->
        <EditText
            android:id="@+id/address_line_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="address"
            android:hint="@string/address_line_hint"
            android:inputType="textPostalAddress"
            android:text="@={representativeViewModel.addressLine1}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/search_title" />

        <!-- TODO: Add data binding value -->
        <!-- TODO: Add visual styling and content -->
        <EditText
            android:id="@+id/address_line_2"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:autofillHints="address"
            android:hint="@string/address_line_2_hint"
            android:inputType="textPostalAddress"
            android:text="@={representativeViewModel.addressLine2}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/address_line_1" />

        <!-- TODO: Add data binding value -->
        <!-- TODO: Add visual styling and content -->
        <EditText
            android:id="@+id/city"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:autofillHints="city"
            android:hint="@string/city_hint"
            android:inputType="textPostalAddress"
            android:text="@={representativeViewModel.city}"
            app:layout_constraintEnd_toStartOf="@id/state"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/address_line_2" />

        <!-- TODO: Add default values from provided resources  -->
        <!-- TODO: Add data binding value -->
        <!-- TODO: Add visual styling and content -->
        <Spinner
            android:id="@+id/state"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:entries="@array/states"
            android:inputType="textPostalAddress"
            app:layout_constraintBottom_toBottomOf="@id/city"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/city"
            app:layout_constraintTop_toTopOf="@id/city"
            android:selectedItemPosition="@={representativeViewModel.selectedStatePosition}"/>

        <!-- TODO: Add data binding value -->
        <!-- TODO: Add visual styling and content -->
        <EditText
            android:id="@+id/zip"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:autofillHints="zipcode"
            android:hint="@string/zipcode_hint"
            android:inputType="number"
            android:maxLength="5"
            android:text="@={representativeViewModel.zip}"
            app:layout_constraintEnd_toEndOf="@id/city"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/city" />

        <!-- TODO: Add visual styling and label -->
        <Button
            android:id="@+id/button_search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:onClick="@{() -> representativeViewModel.findRepresentativesByAddress()}"
            android:text="@string/find_my_representatives"
            android:textColor="@color/white"
            app:layout_constraintTop_toBottomOf="@id/zip" />

        <!-- TODO: Add visual styling and content -->
        <Button
            android:id="@+id/button_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:text="@string/use_my_location"
            android:textColor="@color/white"
            app:layout_constraintTop_toBottomOf="@id/button_search" />

        <!-- TODO: Add visual styling and content -->
        <TextView
            android:id="@+id/representative_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/my_representatives"
            android:visibility="@{representativeViewModel.representatives.size() == 0 ? View.GONE : View.VISIBLE}"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/button_location" />

        <!-- TODO: Add Representatives RecyclerView -->
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/representativesList"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="24dp"
            android:clipToPadding="false"
            android:scrollbars="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/representative_title" />

        <!-- TODO: Add visual styling and content -->
<!--        <TextView-->
<!--            android:id="@+id/list_placeholder"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="0dp"-->
<!--            android:gravity="center"-->
<!--            android:textAlignment="center"-->
<!--            android:visibility="gone"-->
<!--            app:layout_constraintBottom_toBottomOf="parent"-->
<!--            app:layout_constraintTop_toBottomOf="@id/representative_title"-->
<!--            motion:visibilityMode="ignore" />-->

    </androidx.constraintlayout.motion.widget.MotionLayout>
</layout>